# untitled

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.github/: dependabot.yml
.github/actions/check_style/: action.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
src/: cli.rs  config.rs  main.rs  scrape.rs  utilities.rs
src/scraper/: collector.rs  downloader.rs  mod.rs  structs.rs  updater.rs
