[package]
name = "untitled"
version = "0.2.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
dirs = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"
reqwest = { version = "0.12.7", features = ["blocking"] }
scraper = {version = "0.20.0"}