[package]
name = "untitled"
version = "0.2.2"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
chrono = "0.4.38"
dirs = "5.0.1"
reqwest = { version = "0.12.7", features = ["blocking"] }
scraper = {version = "0.20.0"}
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.19"
