[package]
name = "untitled"
version = "0.4.4"
edition = "2021"

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
chrono = "0.4.38"
dirs = "5.0.1"
indicatif = "0.17.8"
rayon = "1.10.0"
reqwest = { version = "0.12.7", features = ["blocking"] }
scraper = { version = "0.22.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
toml = "0.8.19"
anyhow = "1.0.94"
